--- a/src/components/Textarea/Textarea.module.scss
+++ b/src/components/Textarea/Textarea.module.scss
@@ -14,7 +14,7 @@
   padding: 0.5rem 0.75rem;
   border-radius: 0.25rem;
   border-style: solid;
-  border-width: 1px;
+  border-width: 0.125rem;
   resize: vertical;
 
   &.success {
